# provii-mobile-sdk

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  generate_bindings.sh  uniffi.toml
.cargo/: mutants.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  zizmor.yml
.github/workflows/: ci.yml  cla.yml  fuzz.yml  mutants.yml  release.yml  sbom.yml  security-audit.yml
.semgrep/: provii-mobile-sdk.yaml
crates/: README.md
crates/core/: Cargo.toml
crates/core/fuzz/: Cargo.toml  README.md  fuzz_12h_all.sh  fuzz_12h_individual.sh  fuzz_12h_parallel.sh
crates/core/fuzz/fuzz_targets/: fuzz_base64_utils.rs  fuzz_credential_json.rs  fuzz_date_parsing.rs  fuzz_qr_parsing.rs
crates/core/proptest-regressions/: credential.txt  storage.txt  utils.txt
crates/core/src/: async_flow.rs  blind_issuance.rs  credential.rs  credential_tests.rs  error.rs  issuance.rs  issuance_comprehensive_tests.rs  issuance_tests.rs  issuance_trust_anchor_tests.rs  lib.rs  network.rs  parallel.rs  prover.rs  prover_tests.rs  storage.rs  storage_tests.rs  types.rs  types_tests.rs  utils.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: android_init.rs  biometric.rs  deeplink.rs  errors.rs  lib.rs  lib_tests.rs  net.rs  progress.rs  proving_key.rs  qr.rs  state.rs  storage.rs  storage_tests.rs  types.rs  verify.rs  wallet.rs
crates/ffi/src/wallet/: credentials.rs  lifecycle.rs  mod.rs  proof.rs  qr.rs  setup.rs  wallet_tests.rs
crates/platform-storage/: Cargo.toml
crates/platform-storage/src/: lib.rs
crates/store-android/: Cargo.toml
crates/store-android/src/: cache.rs  hardware.rs  keystore_ops.rs  lib.rs  lib_tests.rs  lifecycle.rs  metrics.rs
crates/store-android/tests/: keystore.rs
crates/store-ios/: Cargo.toml
crates/store-ios/src/: cache.rs  device.rs  keychain_ops.rs  lib.rs  lib_tests.rs  lifecycle.rs  metrics.rs  retry.rs
crates/store-ios/tests/: keychain.rs
docs/: INTEGRATION.md  SLSA-COMPLIANCE.md
scripts/: patch_kotlin_bindings.py
