[package]
name = "provii-mobile-sdk-platform-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Trait & helpers for secure platform storage (Android Keystore, iOS Keychain)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }

[lints]
workspace = true
